Fix template syntax error in cart.html
- Fixed malformed HTML structure in cart item buttons
- Consolidated data attributes into a single button element
- Removed invalid Jinja2 syntax and fixed template logic
- Ensured all HTML tags are properly closed

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -544,18 +544,13 @@
                                                 class="btn btn-outline-primary btn-sm change-item-btn" 
                                                 data-item-id="{{ item.id or item._id }}" 
                                                 data-index="{{ loop.index0 }}"
-                                                data-type="{{ item.type }}">
-                                            <i class="fas fa-edit me-1"></i> Change Item
-                                        </button>
-                                        {% if item.type == 'blanket' %}
+                                                data-type="{{ item.type }}"
+                                                {% if item.type == 'blanket' %}
                                                     {% if item.machine %}data-item-machine="{{ item.machine }}"{% endif %}
                                                     {% if item.thickness %}data-item-thickness="{{ item.thickness }}"{% endif %}
                                                     {% if item.length is defined %}data-item-length="{{ item.length }}"{% endif %}
                                                     {% if item.width is defined %}data-item-width="{{ item.width }}"{% endif %}
                                                     {% if item.unit %}data-item-unit="{{ item.unit }}"{% endif %}
-{{ ... }}
-                                        <button type="button" 
-                                                class="btn btn-outline-danger btn-sm remove-item-btn">
                                                 {% elif item.type == 'mpack' %}
                                                     {% if item.machine %}data-item-machine="{{ item.machine }}"{% endif %}
                                                     {% if item.thickness %}data-item-thickness="{{ item.thickness.replace(' micron', '') }}"{% endif %}
@@ -564,7 +559,7 @@
                                                 {% endif %}
                                                 {% if item.discount_percent is defined %}data-item-discount="{{ item.discount_percent }}"{% endif %}
                                                 {% if item.gst_percent is defined %}data-item-gst="{{ item.gst_percent }}"{% endif %}>
-                                            <i class="fas fa-edit me-1"></i> Change
+                                            <i class="fas fa-edit me-1"></i> Change Item
                                         </button>
                                         <button type="button" class="btn btn-outline-danger btn-sm remove-item-btn">
                                             <i class="fas fa-trash-alt me-1"></i> Remove
