fix: update cart layout to show all items in a single container

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -376,10 +376,12 @@
 
         <div id="cartItems" class="cart-items-container" {% if not cart.products or cart.products|length == 0 %}style="display: none;"{% endif %}>
             {% if cart.products %}
-                {% for item in cart.products %}
-                {% if item %}
-                <div class="col-12 col-lg-10 mx-auto">
-                    <div class="cart-item mb-4" 
+                <div class="row justify-content-center">
+                    <div class="col-12 col-lg-10">
+                        <div class="d-flex flex-column gap-3">
+                            {% for item in cart.products %}
+                            {% if item %}
+                            <div class="cart-item" 
                          data-type="{{ item.type }}" 
                          data-index="{{ loop.index0 }}"
                          data-item-id="{{ item.id or item._id }}"
@@ -589,9 +591,11 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                                {% endif %}
+                            {% endif %}
                             {% endfor %}
+                        </div>
+                    </div>
+                </div>
                         {% else %}
                             <div id="emptyCart" class="text-center py-5">
                                 <i class="fas fa-shopping-cart fa-4x text-muted mb-3"></i>
